Replace GTB pre-hint scanner with a working build scanner
The previous "auto hints + prehint" mode was unusable: plot detection
re-scanned a ~535k-block volume on the main thread every 1.5s (the FPS
hit), the per-position baseline often wasn't captured before the first
placements, and the scoring used a tiny keyword table that ignored the
1.8.9 block palette.

This rewrite makes the scanner anchor to the player with a tiny ~150-block
floor probe, capture a one-shot ~24k-block baseline once per round, then
track placements purely from BlockUpdate / ChunkDeltaUpdate packets that
the existing mixins already deliver. Themes are scored against a build
fingerprint that recognizes both modern (orange_terracotta) and 1.8.9
(stained_hardened_clay, log, log2, leaves, leaves2, yellow_flower) IDs
via per-block tokenization, with curated profiles for ~150 common themes
covering colors, materials, shape (flat/round/tall/wide/symmetric), and
single-block signatures (a placed crafting_table guesses "crafting table",
a placed anvil guesses "anvil", etc.). Single-block builds get a strong
dominance bonus; live hint patterns hard-filter incompatible candidates.

Mode dropdown is renamed manual / auto / auto + scanner with legacy-config
migration. ClickGUI dropdown animation jumps from 30 px/s to 720 px/s
(opens in ~80ms instead of 2+s), the panel widens to 150px, and labels
were trimmed so values no longer overlap the dropdown arrow.